# quadcopter

./: .gitignore  CMakeLists.txt  README.md  jenkinsfile  setup.py  setup.sh
FreeRTOS_Linux/: FreeRTOSConfig.h
FreeRTOS_Linux/include/: FreeRTOS.h
FreeRTOS_Linux/source/: CMakeLists.txt
FreeRTOS_Linux/source/portable/: port.c
FreeRTOS_avr/: FreeRTOSConfig.h
FreeRTOS_avr/source/: CMakeLists.txt  croutine.c
FreeRTOS_tasks/: CMakeLists.txt  Factory.hpp  application_code.cpp  application_code.hpp  filter_formula.txt  simulation_story.txt  tasks.cpp  tasks.hpp
Simulation_viewer/: acceleration.m  angular_acceleration.m  constants_drone.asv  constants_drone.m  data.txt  data_generator.py  drone.m  drone_test.m  first_order_apprx.m  functions.m  output_file.txt  parser.m  quadcopter.slx  quadcopter.slx.autosave  quadcopter.slxc  simple_quadcopter.slx  simple_quadcopter.slxc  simualtion_plotter.mlapp  simulation_recorder.mlapp  step1.m  test.py  test.ui  test_simu.slx  test_simu1.slx  test_simu2.slx  test_simu2.slxc  test_simu3.slx  test_simu3.slx.autosave  test_simu3.slxc  threedobject.m  thrust.m  torques.m  untitled.slx.autosave
Simulation_viewer/slprj/_jitprj/: jitEngineAccessInfo.mat  s2lG5ag61hcRgE5b9ZCzftG.l  s2lG5ag61hcRgE5b9ZCzftG.mat  s4LPNh6aERLMC8a8Es5ysTC.mat  s5TtXIVjplRSzOtPQ1Vcu4.l  s5TtXIVjplRSzOtPQ1Vcu4.mat  s8ObrQjBW8MaceOCMwEoFvD.l  s8ObrQjBW8MaceOCMwEoFvD.mat  sA24BLZDCkgQQT4Eg2nE5SD.l  sA24BLZDCkgQQT4Eg2nE5SD.mat  sAebuVOl0AZB6W6khBfhuFE.l  sAebuVOl0AZB6W6khBfhuFE.mat  sArQQ5j6bo3PhSf27CydTkD.l  sArQQ5j6bo3PhSf27CydTkD.mat  sB2lOHG8cGmY3FkxGZiOZmH.l  sB2lOHG8cGmY3FkxGZiOZmH.mat  sBODsRoTbh83QlWsWn1PfjE.mat  sCmMQqQIi64epGYOzDWwwaC.l  sCmMQqQIi64epGYOzDWwwaC.mat  sE2BY1tsjLEXcXHAzBH3yiB.l  sE2BY1tsjLEXcXHAzBH3yiB.mat  sFHHEB5cqPGiDRZP3ZWl44E.mat  sFcXDozrIwRX90f7yBaQ7dG.l  sFcXDozrIwRX90f7yBaQ7dG.mat  sFkgMfxpFljh69U32qjnwMB.l  sFkgMfxpFljh69U32qjnwMB.mat  sGLpAExJbws3ZbpQw93ueFD.l  sGLpAExJbws3ZbpQw93ueFD.mat  sGY94sWr6RJnngaPjn5WLzB.l  sGY94sWr6RJnngaPjn5WLzB.mat  sHPeh2AVyrZNRDL4HMi8RZB.l  sHPeh2AVyrZNRDL4HMi8RZB.mat  sHwDgegGGqrIqQmvlHoo8jF.l  sHwDgegGGqrIqQmvlHoo8jF.mat  sIY6rB566P8lGYazfg87FsE.l  sIY6rB566P8lGYazfg87FsE.mat  sL8yPXatOsLiEYtAauuElS.l  sL8yPXatOsLiEYtAauuElS.mat  sLVui76OuifLjweS7D6Q1K.l  sLVui76OuifLjweS7D6Q1K.mat  (+103 more)
Simulation_viewer/slprj/_sfprj/EMLReport/: Md0WXgjMQp88enCZ9RgMo.mat  XgqqooiPGf20piRm4DuMWH.mat  emlReportAccessInfo.mat  ofeCK3R5EKzNKZJNXEbIvC.mat  s2lG5ag61hcRgE5b9ZCzftG.mat  s4LPNh6aERLMC8a8Es5ysTC.mat  s5TtXIVjplRSzOtPQ1Vcu4.mat  s8ObrQjBW8MaceOCMwEoFvD.mat  sA24BLZDCkgQQT4Eg2nE5SD.mat  sAebuVOl0AZB6W6khBfhuFE.mat  sArQQ5j6bo3PhSf27CydTkD.mat  sB2lOHG8cGmY3FkxGZiOZmH.mat  sBODsRoTbh83QlWsWn1PfjE.mat  sCmMQqQIi64epGYOzDWwwaC.mat  sE2BY1tsjLEXcXHAzBH3yiB.mat  sFHHEB5cqPGiDRZP3ZWl44E.mat  sFcXDozrIwRX90f7yBaQ7dG.mat  sFkgMfxpFljh69U32qjnwMB.mat  sGLpAExJbws3ZbpQw93ueFD.mat  sGY94sWr6RJnngaPjn5WLzB.mat  sHPeh2AVyrZNRDL4HMi8RZB.mat  sHwDgegGGqrIqQmvlHoo8jF.mat  sIY6rB566P8lGYazfg87FsE.mat  sJvhMfMG2bLvftrVNxwKDFD.mat  sL8yPXatOsLiEYtAauuElS.mat  sLVui76OuifLjweS7D6Q1K.mat  sMq5RafOIKjIB5X5grw5HgB.mat  sNI8Yekxx5VJV5jzqEe0JaD.mat  sOKrW3Mp5UjIzEE06J4LFHF.mat  sOYL87RWaQxflhNXpgiRWOC.mat  sROlXpISYIzKOnT0N5GTUjE.mat  sSBGLgFIY7NsAPaNu6IJ1QC.mat  sSeR395U5qKbgBJxarKOMyB.mat  sUTGwztbse1VDmwfkZ4X11B.mat  sVBP93t6mdMiUTSejzKi0eH.mat  sVQPBqd6lBS2sdNYqEkILaF.mat  sX2CEdqSGvkhIs9R9d1BoYH.mat  sX2NQpgNzUi8A8wz9d3XddE.mat  sXKriWqBsAi9FEqqwiocUJG.mat  sYv2MAs7gUDc2EQNDMKDap.mat  (+40 more)
Simulation_viewer/slprj/_sfprj/precompile/: 2sRPtgshKuhtg9Mby1hSLG.mat  2wncRga8vXlljOGr5ZtAvG.mat  3EUxSVfEEWHEgNdAII8MaF.mat  4y1PdNpmB7LrY2hXaoBGc.mat  6LlFSuINeQwQk2Cpn8JDmG.mat  72uxjr8BXXxPDtK5yXQCLG.mat  79pVqkQIkPBKlL9hgqKIrF.mat  8d5FYzIGruWF69IKt8eRzE.mat  9bbjQl3zX9PO1QRkMKhZhC.mat  9lYU1AerxhcMzNY2zMzwsH.mat  ABKaUaspvXCvIS85yGsyL.mat  BI4NIuSC3HqwePC7zfYcPD.mat  EGWvogDwUS8l8RawzuyXGF.mat  F5ds4xm0scba6PRppxvWhF.mat  FESCAj8Ck3VS2eZX8S1CGH.mat  FphuiVBHeUQir8cULOi9XH.mat  GpF2fcj8iuIwmLOHddnJTE.mat  H5PYP60GZ2lRdvXoFURScE.mat  HDtCfldOcLU4m5OVDmNK.mat  HNQqxikjs1UQCEnH5VCOFB.mat  HPIgGdouRsVctO3g4JSAgE.mat  I4SXRHhAxWDjX8pIoffLeC.mat  IOw3xmS52OCncwWNm1DMeE.mat  (+37 more)
application_code/: CLed.cpp  CLed.hpp  CMakeLists.txt  IAbstractFactory.h  ITransportLayerFactory.h  binder.hpp  implementation.cpp  implementation.hpp  interface.hpp  test.cpp  test.hpp
application_code/communication/: CMakeLists.txt  DroneComm.cpp  DroneComm.hpp
application_code/communication/protocols/: CMakeLists.txt  I_Datalink_Layer.hpp  MPU_6050.cpp  MPU_6050.hpp
application_code/communication/transport_layer/: CMakeLists.txt  I2C_fake.cpp  I2C_fake.hpp  I_Serial_Communication.hpp  UART_fake.cpp  UART_fake.hpp
application_code/communication/transportation/: CMakeLists.txt  I_Serial_Communication.hpp  UART.cpp  UART.hpp
application_code/components/: Binds.hpp  Component.hpp  Input.hpp  Output.hpp  OutputObserver.hpp  Parameter.hpp  ParameterBase.hpp  ParameterWrite.hpp  Singleton.hpp  test.hpp  type_name.hpp
application_code/control/: Binds.cpp  Binds.hpp  CMakeLists.txt  PID_Controller.hpp  drone_altitude_controller.cpp  drone_altitude_controller.hpp  drone_control.cpp  drone_control.hpp  drone_stabilze_controller.cpp  drone_stabilze_controller.hpp  drone_state_machine.hpp
avr_code/: CMakeLists.txt  main.cpp  operators.cpp  operators.h
avr_code/communication/: CMakeLists.txt
avr_code/communication/hardware_layer/: CMakeLists.txt  uart.h
avr_code/communication/transport_layer/: CMakeLists.txt  I_Serial_Communication.hpp  UART.cpp  UART.hpp
flash/: flash.sh  output_script  output_script.sh
pc/: CMakeLists.txt  main.cpp
pc/simulation/: simulation.cpp  simulation.hpp
quadcopter_simulation/: CMakeLists.txt  quadcopter_simulation.cpp  quadcopter_simulation.hpp
simulation_tests/: start_simulations.py
simulation_tests/test_somname/: start_test.py
simulation_tests/test_somname2/: configuration.conf  ids_to_log.txt  python.m  start_test.py
simulation_tests/test_somname2/tmp/: output_file.simu
unittest/: CMakeLists.txt  main.cpp
(+22 files in other folders)
