#####################################################################
# simple AVR executable
#####################################################################
add_avr_executable(
   Quadcopter
   main.cpp
   )

#####################################################################
# libraries to link to
#####################################################################
target_link_libraries(
   Quadcopter-${AVR_MCU}.elf
   application_code-${AVR_MCU}
   )
